--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html>
   <head>
     <title>Ian Codes</title>
+    <style>
+      body {
+        background: rgba(114, 1, 1, 0.705);
+        color:rgb(0, 0, 0);
+      }
+      .main-box {
+        border: 1px solid rgb(161, 1, 1);
+        margin: 50px auto;
+        max-width: 600px;
+        padding: 2em;
+      }
+      .main-title {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+    <div class="main-box">
+      <h1 class="main-title">Sombies</h1>
+      <p>Los sombies te lastiman en fortnite matalos en modo,salvar el mundo. <br>
+        <a href="https://www.epicgames.com/fortnite/es-ES/download">Instalalo acá</a> juega battle royal modo gratuito
+      </p>
+    </div>
+
     <div>
       <h1>Sombies</h1>
-      <p>Los somies te lastiman en fortnite matalos en modo,salvar el mundo. <br>
+      <p>Los sombies te lastiman en fortnite matalos en modo,salvar el mundo. <br>
         <a href="https://www.epicgames.com/fortnite/es-ES/download">Instalalo acá</a> juega battle royal modo gratuito
       </p>
     </div>
