--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Ian Codes</title>
-    <style>
-      body {
-        background: rgba(114, 1, 1, 0.705);
-        color:rgb(0, 0, 0);
-      }
-      .main-box {
-        border: 1px solid rgb(161, 1, 1);
-        margin: 50px auto;
-        max-width: 600px;
-        padding: 2em;
-      }
-      .main-title {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="main-box">
-      <h1 class="main-title">Sombies</h1>
-      <p>Los sombies te lastiman en fortnite matalos en modo,salvar el mundo. <br>
-        <a href="https://www.epicgames.com/fortnite/es-ES/download">Instalalo acá</a> juega battle royal modo gratuito
-      </p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <header>
+    <div id="logo"><span>Ian Parra</span></div>
+    <div class="menu">
+      <ul>
+        <li><a href="#">inicio</a></li>
+        <li><a href="#">tutoriales</a></li>
+        <li><a href="#">donar</a></li>
+      </ul>
     </div>
-
-    <div>
-      <h1>Sombies</h1>
-      <p>Los sombies te lastiman en fortnite matalos en modo,salvar el mundo. <br>
-        <a href="https://www.epicgames.com/fortnite/es-ES/download">Instalalo acá</a> juega battle royal modo gratuito
-      </p>
-    </div>
-  </body>
+  </header>
+</body>
 </html>
