cambios de estilos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ian Parra</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -17,5 +19,22 @@
       </ul>
     </div>
   </header>
+
+  <div class="contenedor">
+    <div id="bloque-1" class="bloque">
+      <span>Hola!</span>
+    </div>
+    <div id="bloque-2" class="bloque">
+      <span>ola ke ase!</span>
+    </div>
+    <div id="bloque-3" class="bloque">
+      <span>Hola!</span>
+    </div>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi eveniet obcaecati vel voluptatum libero accusamus laborum minus nam vero necessitatibus distinctio, voluptatibus repudiandae aspernatur possimus? Quas voluptatem corrupti eum quo.</p>
+  </div>
+
 </body>
 </html>
